{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 106,
  "lineage": "0bd9d755-3002-b6e8-dc44-204e98a7f484",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pptf_lb_wp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:loadbalancer/app/pptf-lb-wordpress/4caf03d09a2e869e",
            "arn_suffix": "app/pptf-lb-wordpress/4caf03d09a2e869e",
            "dns_name": "pptf-lb-wordpress-1968443003.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:loadbalancer/app/pptf-lb-wordpress/4caf03d09a2e869e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pptf-lb-wordpress",
            "security_groups": [
              "sg-0cbaa087282af550a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-71cd783d"
              },
              {
                "subnet_id": "subnet-78a6fd11"
              },
              {
                "subnet_id": "subnet-d8a8cfa2"
              }
            ],
            "subnets": [
              "subnet-71cd783d",
              "subnet-78a6fd11",
              "subnet-d8a8cfa2"
            ],
            "tags": {
              "Name": "pptf-lb-wordpress"
            },
            "vpc_id": "vpc-6c87d604",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.pptf_alb_worpress_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pptf_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:listener/app/pptf-lb-wordpress/4caf03d09a2e869e/1bc808f48e34a318",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:listener/app/pptf-lb-wordpress/4caf03d09a2e869e/1bc808f48e34a318",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:loadbalancer/app/pptf-lb-wordpress/4caf03d09a2e869e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.pptf_lb_wp",
            "aws_security_group.pptf_alb_worpress_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "pptf_asg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:targetgroup/pptf-tg-wordpress/9f717557c49b0e2e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:listener-rule/app/pptf-lb-wordpress/4caf03d09a2e869e/1bc808f48e34a318/28de281482d81b32",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:listener-rule/app/pptf-lb-wordpress/4caf03d09a2e869e/1bc808f48e34a318/28de281482d81b32",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:listener/app/pptf-lb-wordpress/4caf03d09a2e869e/1bc808f48e34a318",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.pptf_lb_wp",
            "aws_lb_listener.pptf_http",
            "aws_lb_target_group.pptf_wp_tg",
            "aws_security_group.pptf_alb_worpress_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pptf_wp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:targetgroup/pptf-tg-wordpress/9f717557c49b0e2e",
            "arn_suffix": "targetgroup/pptf-tg-wordpress/9f717557c49b0e2e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:118268119350:targetgroup/pptf-tg-wordpress/9f717557c49b0e2e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pptf-tg-wordpress",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-6c87d604"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pptf_alb_worpress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118268119350:security-group/sg-0cbaa087282af550a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbaa087282af550a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ppalb-wp-instance-sg",
            "name_prefix": "",
            "owner_id": "118268119350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pptf_alb_wordpress_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-6c87d604"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pptf_allow_worpress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:118268119350:security-group/sg-0e1a077c45568ecae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1a077c45568ecae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ppallow-wp-instance-sg",
            "name_prefix": "",
            "owner_id": "118268119350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pptf_allow_wordpress_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-6c87d604"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allo_mysql_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-735714649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e1a077c45568ecae",
            "self": false,
            "source_security_group_id": "sg-0e1a077c45568ecae",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.pptf_allow_worpress_http"
          ]
        }
      ]
    }
  ]
}